--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
+    "firebase-admin": "^9.7.0",
     "socket.io": "^4.0.1"
   }
 }
