Install Sequel ORM.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "firebase-admin": "^9.7.0",
     "mariadb": "^2.5.3",
+    "sequelize": "^6.6.2",
     "socket.io": "^4.0.1"
   }
 }
